v3/utils.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [utils](./utils.md)

## utils package

基础工具库。基于 [Lodash](https://lodash.com/docs/4.17.15)<!-- -->。

## Classes

|  Class | Description |
|  --- | --- |
|  [EventBus](./utils.eventbus.md) | 事件巴士，管理事件的发布与订阅。 TListeners 事件名称及其对应的回调描述 |
|  [RichUrl](./utils.richurl.md) | 富链接，同普通链接相比，富链接可包含一些描述信息。<!-- -->结构描述：
```text
rich://{"url":"***","desc":"***"}

```
 |
|  [TreeData](./utils.treedata.md) | 树数据处理。支持单根节点、多根节点树数据。 |
|  [Wechat](./utils.wechat.md) | 对微信 JSSDK 的封装。 |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [LoadResourceUrlType](./utils.loadresourceurltype.md) | 资源类型。 |

## Functions

|  Function | Description |
|  --- | --- |
|  [base64Decode(value)](./utils.base64decode.md) | 将给定的 base64 字符串解码为 UTF8 字符串。 |
|  [base64Encode(value)](./utils.base64encode.md) | 将给定的 UTF8 字符串编码为 base64 字符串。 |
|  [base64UrlDecode(value)](./utils.base64urldecode.md) | 将给定的 base64url 字符串解码为 UTF8 字符串。 |
|  [base64UrlEncode(value)](./utils.base64urlencode.md) | 将给定的 UTF8 字符串编码为 URL 安全的 base64url 字符串。 |
|  [bindEvent(target)](./utils.bindevent.md) | 绑定事件。 |
|  [chooseFile(accept, multiple)](./utils.choosefile.md) | 选择文件。 |
|  [constantCase(text)](./utils.constantcase.md) | 转换文本为大写字符串，单词之间带有下划线。 |
|  [copyTextToClipboard(text)](./utils.copytexttoclipboard.md) | 复制文本到剪切板。 |
|  [createSubmit(options)](./utils.createsubmit.md) | 创建提交类行为。 |
|  [createUrlQueryString(parameters, options)](./utils.createurlquerystring.md) | 创建 url 查询字符串。 |
|  [dedent(literals, interpolations)](./utils.dedent.md) | 首先，每一行紧跟前导空白的插入值为多行时，保持缩进。 然后，移除每一行的公共前导空白。 |
|  [formatBytes(value)](./utils.formatbytes.md) | 格式化字节数，以 1024 作为千字节数。 |
|  [formatNumber(value, options)](./utils.formatnumber.md) | 格式化数字。 |
|  [getEnvironment()](./utils.getenvironment.md) | 获取运行环境信息。 |
|  [getWechatPublicAccountQrcodeUrl(accountId)](./utils.getwechatpublicaccountqrcodeurl.md) | 获取微信公众号的二维码链接。 |
|  [inAndroid()](./utils.inandroid.md) | 检查是否在 Android 设备中。 |
|  [inBrowser()](./utils.inbrowser.md) | 检查是否在浏览器环境中。 |
|  [inDeno()](./utils.indeno.md) | 检查是否在 Deno 中。 |
|  [indent(literals, interpolations)](./utils.indent.md) | 每一行紧跟前导空白的插入值为多行时，保持缩进。 |
|  [inIOS()](./utils.inios.md) | 检查是否在 iOS 设备中。 |
|  [inMiniProgram(brand)](./utils.inminiprogram.md) | 检查是否在指定品牌的小程序中，若在，返回承载其 API 的全局对象，若不在，返回 false。 |
|  [inNodeJS()](./utils.innodejs.md) | 检查是否在 Node.js 中。 |
|  [inTaro()](./utils.intaro.md) | 检查是否在 \[Taro 3\](https://taro.js.org/) 中。 |
|  [inWechatWebView()](./utils.inwechatwebview.md) | 检查是否在微信内置浏览器中。 |
|  [isBlobUrl(value)](./utils.isbloburl.md) | 检测传入值是否是 Blob URL，也称 Object URL。 |
|  [isChineseIDCardNumber(value)](./utils.ischineseidcardnumber.md) | 检测传入的值是否是合法的中国大陆居民 <code>18</code> 位身份证号码。 |
|  [isDataUrl(value)](./utils.isdataurl.md) | 检测传入值是否是 Data URL。 |
|  [isNumeric(value)](./utils.isnumeric.md) | 检查 <code>value</code> 是否是数值，需要注意的是 <code>Infinity</code>、<code>-Infinity</code>、<code>NaN</code> 不被认为是数值。 |
|  [isPossibleChineseMobilePhoneNumber(value)](./utils.ispossiblechinesemobilephonenumber.md) | 检测传入的值是否可能是中国的手机号码。 |
|  [isPromiseLike(value)](./utils.ispromiselike.md) | 检查 <code>value</code> 是否像 <code>Promise</code>。 |
|  [isUrl(value)](./utils.isurl.md) | 检测传入值是否是 URL。 |
|  [loadCss(urlOrContent)](./utils.loadcss.md) | 加载 CSS 样式，支持链接和内容。 |
|  [loadResource(url)](./utils.loadresource.md) | 加载图片、代码、样式等资源。 |
|  [md5(string, key, raw)](./utils.md5.md) | 根据给定的字符串计算 MD5 值。 |
|  [move(arr, from, to)](./utils.move.md) | 原地移动数组中的元素。 |
|  [onceMeanwhile(fn)](./utils.oncemeanwhile.md) | 同一时间对函数的调用只会触发一次运行。 |
|  [parseDataUrl(dataUrl)](./utils.parsedataurl.md) | 解析 Data URL。 |
|  [parseUrlQueryString(query, options)](./utils.parseurlquerystring.md) | 解析 url 查询字符串。<!-- -->兼容以 <code>?</code> 开头的查询字符串，因此你可以直接传入 <code>location.search</code> 的值。 |
|  [pascalCase(text)](./utils.pascalcase.md) | 转换文本为没有分隔符的大写单词字符串。 |
|  [placeKitten(size)](./utils.placekitten.md) | 给定大小获取占位猫咪图片。 |
|  [placeKitten(width, height)](./utils.placekitten_1.md) | 给定宽高获取占位猫咪图片。 |
|  [readFile(file)](./utils.readfile.md) | 读取给定文件的内容。 |
|  [run(fn)](./utils.run.md) | 以数组的方式返回函数执行的结果，如果函数返回一个异步操作，将会执行该异步操作并将其结果作为函数执行的结果返回。 |
|  [swap(arr, i, j)](./utils.swap.md) | 原地交换数组中的两个元素。 |
|  [traverse(value, callback)](./utils.traverse.md) | 遍历对象和数组。 |
|  [wait(milliseconds, value)](./utils.wait.md) | 等待一段时间 resolve。 |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [CreateSubmitOptions](./utils.createsubmitoptions.md) |  |
|  [CreateUrlQueryStringOptions](./utils.createurlquerystringoptions.md) |  |
|  [EventBusListenerDescriptor](./utils.eventbuslistenerdescriptor.md) |  |
|  [EventBusOptions](./utils.eventbusoptions.md) |  |
|  [FormatNumberOptions](./utils.formatnumberoptions.md) | 格式化数字选项。 |
|  [GetEnvironmentResult](./utils.getenvironmentresult.md) |  |
|  [LoadCssResult](./utils.loadcssresult.md) |  |
|  [LoadResourceUrl](./utils.loadresourceurl.md) | 资源地址。 |
|  [ParseDataUrlResult](./utils.parsedataurlresult.md) |  |
|  [ParsedFileRichUrl](./utils.parsedfilerichurl.md) |  |
|  [ParsedRichUrl](./utils.parsedrichurl.md) |  |
|  [ReadFileReader](./utils.readfilereader.md) | 各种内容类型的读取器。 |
|  [SubmitActionPayload](./utils.submitactionpayload.md) |  |
|  [TreeDataNode](./utils.treedatanode.md) |  |
|  [TreeDataOptions](./utils.treedataoptions.md) |  |
|  [TreeDataTraverseFnPayload](./utils.treedatatraversefnpayload.md) |  |
|  [WaitResult](./utils.waitresult.md) |  |
|  [WechatChooseImageParams](./utils.wechatchooseimageparams.md) |  |
|  [WechatConfigParams](./utils.wechatconfigparams.md) |  |
|  [WechatOpenLocationParams](./utils.wechatopenlocationparams.md) |  |
|  [WechatPreviewImageParams](./utils.wechatpreviewimageparams.md) |  |
|  [WechatRequestPaymentParams](./utils.wechatrequestpaymentparams.md) |  |
|  [WechatUpdateShareDataParams](./utils.wechatupdatesharedataparams.md) |  |
|  [WechatUploadImageParams](./utils.wechatuploadimageparams.md) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [isBlobUrl](./utils.isbloburl.md) |  |
|  [isDataUrl](./utils.isdataurl.md) |  |
|  [wait](./utils.wait.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [keysStrict](./utils.keysstrict.md) | 同 [keys](https://lodash.com/docs/4.17.15#keys)<!-- -->，不过采用了严格的类型定义。 |
|  [omitStrict](./utils.omitstrict.md) | 同 [omit](https://lodash.com/docs/4.17.15#omit)<!-- -->，不过采用了严格的类型定义。 |
|  [pickStrict](./utils.pickstrict.md) | 同 [pick](https://lodash.com/docs/4.17.15#pick)<!-- -->，不过采用了严格的类型定义。 |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [BindEventFunction](./utils.bindeventfunction.md) | 绑定事件函数。 |
|  [CreateSubmitResult](./utils.createsubmitresult.md) |  |
|  [EventBusBeforeEmit](./utils.eventbusbeforeemit.md) |  |
|  [EventBusBeforeOn](./utils.eventbusbeforeon.md) |  |
|  [EventBusListener](./utils.eventbuslistener.md) |  |
|  [EventBusListeners](./utils.eventbuslisteners.md) |  |
|  [EventBusListenerTag](./utils.eventbuslistenertag.md) |  |
|  [EventBusOffListener](./utils.eventbusofflistener.md) |  |
|  [MiniProgramApi](./utils.miniprogramapi.md) |  |
|  [MiniProgramBrand](./utils.miniprogrambrand.md) |  |
|  [TreeDataChildrenPropName](./utils.treedatachildrenpropname.md) |  |
|  [TreeDataData](./utils.treedatadata.md) |  |
|  [TreeDataMultipleRootData](./utils.treedatamultiplerootdata.md) |  |
|  [TreeDataSearchStrategy](./utils.treedatasearchstrategy.md) |  |
|  [TreeDataSingleRootData](./utils.treedatasinglerootdata.md) |  |
|  [TreeDataTraverseFn](./utils.treedatatraversefn.md) |  |
|  [WechatErrorCallback](./utils.wechaterrorcallback.md) |  |
|  [WechatJsApi](./utils.wechatjsapi.md) | 微信 JSSDK 支持的 API。 |
|  [WechatNonBaseMenuItem](./utils.wechatnonbasemenuitem.md) | 微信内网页的非基础菜单列表。 |

