v4/utils.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [utils](./utils.md)

## utils package

基础工具库。基于 [Lodash](https://lodash.com/docs/4.17.15)<!-- -->。

## Classes

|  Class | Description |
|  --- | --- |
|  [DataPacker](./utils.datapacker.md) | 数据打包器。 |
|  [EventBus](./utils.eventbus.md) | <p>事件巴士，管理事件的发布与订阅。</p><p> TListeners 事件名称及其对应的回调描述</p> |
|  [GeoCoord](./utils.geocoord.md) | <p>地理坐标系转换工具。</p><p>- <code>大地坐标系（WGS84 坐标系）</code>: GPS 全球卫星定位系统使用的坐标系； - <code>火星坐标系（GCJ02 坐标系）</code>: 腾讯地图、高德地图等使用的坐标系，是由中国国家测绘局制定的由 WGS84 加密后得到的坐标系； - <code>百度坐标系（BD09 坐标系）</code>: 百度地图使用的坐标系，是在 GCJ02 基础上再次加密得到的坐标系。</p> |
|  [LocalStoragePlus](./utils.localstorageplus.md) | <p>本地存储增强。</p><p>已兼容小程序。</p> |
|  [LoopUntilRetryLimitExceededError](./utils.loopuntilretrylimitexceedederror.md) |  |
|  [MiniProgramUrl](./utils.miniprogramurl.md) | 小程序链接。 |
|  [RichUrl](./utils.richurl.md) | <p>富链接，同普通链接相比，富链接可包含一些描述信息。</p><p>结构描述：</p>
```text
rich://{"url":"***","desc":"***"}
```
 |
|  [StringTemplate](./utils.stringtemplate.md) | 字符串模板。 |
|  [TreeData](./utils.treedata.md) | 树数据处理。支持单根节点、多根节点树数据。 |
|  [Wechat](./utils.wechat.md) | 对微信 JSSDK 的封装。 |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [DesensitizeStrategy](./utils.desensitizestrategy.md) |  |
|  [LoadResourceUrlType](./utils.loadresourceurltype.md) | 资源类型。 |

## Functions

|  Function | Description |
|  --- | --- |
|  [asRequiredDeep(value)](./utils.asrequireddeep.md) | 将给定的值 <code>RequiredDeep</code> 化。 |
|  [asyncLimit(asyncFn, options)](./utils.asynclimit.md) | 异步函数并行执行限制。 |
|  [asyncMemoize(asyncFn, options)](./utils.asyncmemoize.md) | 异步函数执行缓存。 |
|  [base64Decode(value)](./utils.base64decode.md) | 将给定的 base64 字符串解码为 UTF8 字符串。 |
|  [base64Encode(value)](./utils.base64encode.md) | 将给定的 UTF8 字符串编码为 base64 字符串。 |
|  [base64UrlDecode(value)](./utils.base64urldecode.md) | 将给定的 base64url 字符串解码为 UTF8 字符串。 |
|  [base64UrlEncode(value)](./utils.base64urlencode.md) | 将给定的 UTF8 字符串编码为 URL 安全的 base64url 字符串。 |
|  [bindEvent(target)](./utils.bindevent.md) | 绑定事件。 |
|  [bytes(value, unit)](./utils.bytes.md) | 获取字节值。 |
|  [bytes(value)](./utils.bytes_1.md) | 获取字节值。 |
|  [cartesianProduct(arr)](./utils.cartesianproduct.md) | 计算多个数组的笛卡尔积。 |
|  [cartesianProduct(arr)](./utils.cartesianproduct_1.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_2.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_3.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_4.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_5.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_6.md) |  |
|  [cartesianProduct(arr)](./utils.cartesianproduct_7.md) |  |
|  [characterToCodepoint(character)](./utils.charactertocodepoint.md) | UTF8 字符转为 Unicode 码点。 |
|  [chooseFile(accept, multiple)](./utils.choosefile.md) | 选择文件。 |
|  [chunkEqual(array, size, filler, consistent)](./utils.chunkequal.md) | 类似 <code>chunk</code>，但当每组条目数量不一致时会在最后一组添加填充值以达到每组条目数量一致。 |
|  [cloneDeepFast(value, ignore)](./utils.clonedeepfast.md) | 深克隆快速版。 |
|  [codepointToCharacter(codepoint)](./utils.codepointtocharacter.md) | Unicode 码点转为 UTF8 字符。 |
|  [constantCase(text)](./utils.constantcase.md) | 转换文本为大写字符串，单词之间带有下划线。 |
|  [copyTextToClipboard(text, options)](./utils.copytexttoclipboard.md) | 复制文本到剪切板。 |
|  [createSubmit(options)](./utils.createsubmit.md) | 创建提交类行为。 |
|  [createSubmit(options)](./utils.createsubmit_1.md) | 创建提交类行为。 |
|  [createUrlQueryString(parameters, options)](./utils.createurlquerystring.md) | 创建 url 查询字符串。 |
|  [dedent(text)](./utils.dedent.md) | 移除每一行的公共前导空白。 |
|  [dedent(literals, interpolations)](./utils.dedent_1.md) | 首先，每一行紧跟前导空白的插入值为多行时，保持缩进。 然后，移除每一行的公共前导空白。 |
|  [defaultIndexTo(index, defaultIndex)](./utils.defaultindexto.md) | 设置默认索引。当前索引为 <code>-1</code> 或 <code>NaN</code> 时会使用默认索引。 |
|  [desensitize(text, options)](./utils.desensitize.md) | 文本脱敏。 |
|  [formatBytes(value)](./utils.formatbytes.md) | 格式化字节数，以 1024 作为千字节数。 |
|  [formatNumber(value, options)](./utils.formatnumber.md) | 格式化数字。 |
|  [getCurrentScript()](./utils.getcurrentscript.md) | <p>返回当前正在运行的脚本所属的 <code>&lt;script&gt;</code> 元素。有两点限制：</p><p>- 只在脚本被解析后首次运行时有效； - 如果当前正在执行的代码是被其他代码作为回调函数或者事件处理函数调用的，会返回 <code>null</code>。</p> |
|  [getEmailUrl(options)](./utils.getemailurl.md) | 获取邮件链接。 |
|  [getEnvironment()](./utils.getenvironment.md) | 获取运行环境信息。 |
|  [getSmsUrl(options)](./utils.getsmsurl.md) | 获取短信链接。 |
|  [getWechatPublicAccountQrcodeUrl(accountId)](./utils.getwechatpublicaccountqrcodeurl.md) | 获取微信公众号的二维码链接。 |
|  [htmlToDocumentFragment(html)](./utils.htmltodocumentfragment.md) | 将 HTML 字符串转为 DocumentFragment。 |
|  [htmlToElement(html)](./utils.htmltoelement.md) | 将 HTML 字符串转为 Element。 |
|  [ii(fn)](./utils.ii.md) | <p>立即调用函数并返回其返回值。</p><p>注：<code>ii = immediately invoke</code></p> |
|  [inAndroid()](./utils.inandroid.md) | 检查是否在 Android 设备中。 |
|  [inBrowser()](./utils.inbrowser.md) | 检查是否在浏览器环境中。 |
|  [inDeno()](./utils.indeno.md) | 检查是否在 Deno 中。 |
|  [indent(literals, interpolations)](./utils.indent.md) | 每一行紧跟前导空白的插入值为多行时，保持缩进。 |
|  [inIOS()](./utils.inios.md) | 检查是否在 iOS 设备中。 |
|  [inMiniProgram(brand)](./utils.inminiprogram.md) | 检查是否在指定品牌的小程序中，若在，返回承载其 API 的全局对象，若不在，返回 false。 |
|  [inMiniProgramWebView()](./utils.inminiprogramwebview.md) | <p>检查是否在小程序 WebView 中。</p><p>仅支持微信、QQ、支付宝、抖音、百度。</p> |
|  [inNodeJS()](./utils.innodejs.md) | 检查是否在 Node.js 中。 |
|  [inTaro()](./utils.intaro.md) | 检查是否在 \[Taro 3\](https://taro.js.org/) 中。 |
|  [inWechatWebView()](./utils.inwechatwebview.md) | 检查是否在微信内置浏览器中。 |
|  [isBlobUrl(value)](./utils.isbloburl.md) | 检测传入值是否是 Blob URL，也称 Object URL。 |
|  [isChineseIDCardNumber(value)](./utils.ischineseidcardnumber.md) | 检测传入的值是否是合法的中国大陆居民 <code>18</code> 位身份证号码。 |
|  [isCuid(value)](./utils.iscuid.md) | 检测传入值是否是 Cuid。 |
|  [isCuid2(value, options)](./utils.iscuid2.md) | 检测传入值是否是 Cuid2。 |
|  [isDataUrl(value)](./utils.isdataurl.md) | 检测传入值是否是 Data URL。 |
|  [isElementVisible(el)](./utils.iselementvisible.md) | 检查 HTML 元素是否可见。 |
|  [isEmail(value)](./utils.isemail.md) | 检测传入值是否是邮箱地址。 |
|  [isNumeric(value)](./utils.isnumeric.md) | 检查 <code>value</code> 是否是数值，需要注意的是 <code>Infinity</code>、<code>-Infinity</code>、<code>NaN</code> 不被认为是数值。 |
|  [isPossibleChineseMobilePhoneNumber(value)](./utils.ispossiblechinesemobilephonenumber.md) | 检测传入的值是否可能是中国的手机号码。 |
|  [isPromiseLike(value)](./utils.ispromiselike.md) | 检查 <code>value</code> 是否像 <code>Promise</code>。 |
|  [isType(value)](./utils.istype.md) | 对 <code>value is T</code> 的封装。 |
|  [isUrl(value)](./utils.isurl.md) | 检测传入值是否是 URL。 |
|  [jsonp(url, keyOfCallbackName)](./utils.jsonp.md) | 发起 jsonp 请求。 |
|  [loadCss(urlOrContent)](./utils.loadcss.md) | 加载 CSS 样式，支持链接和内容。 |
|  [loadResource(url, options)](./utils.loadresource.md) | 加载图片、代码、样式等资源。 |
|  [loopUntil(fn, condition, options)](./utils.loopuntil.md) |  |
|  [loopUntil(condition, options)](./utils.loopuntil_1.md) |  |
|  [makeConditionalArray(array, childrenKey)](./utils.makeconditionalarray.md) | 构造条件数组，即允许一个数组的项出现 false 值，且最终 false 值的项目会被排除。 |
|  [makeConditionalArray(array)](./utils.makeconditionalarray_1.md) | 构造条件数组，即允许一个数组的项出现 false 值，且最终 false 值的项目会被排除。 |
|  [makeEnum(map)](./utils.makeenum.md) | 构造枚举数据。 |
|  [md5(string, key, raw)](./utils.md5.md) | 根据给定的字符串计算 MD5 值。 |
|  [move(arr, from, to)](./utils.move.md) | 原地移动数组中的元素。 |
|  [moveDown(arr, from, step)](./utils.movedown.md) | 原地下移数组中的某个元素。 |
|  [moveToBottom(arr, from)](./utils.movetobottom.md) | 原地置底数组中的某个元素。 |
|  [moveToTop(arr, from)](./utils.movetotop.md) | 原地置顶数组中的某个元素。 |
|  [moveUp(arr, from, step)](./utils.moveup.md) | 原地上移数组中的某个元素。 |
|  [ms(value, unit, returnSeconds)](./utils.ms.md) | 获取毫秒值。 |
|  [ms(value, returnSeconds)](./utils.ms_1.md) | 获取毫秒值。 |
|  [onceMeanwhile(fn)](./utils.oncemeanwhile.md) | 同一时间对函数的调用只会触发一次运行。 |
|  [parseDataUrl(dataUrl)](./utils.parsedataurl.md) | 解析 Data URL。 |
|  [parseUrlQueryString(query, options)](./utils.parseurlquerystring.md) | <p>解析 url 查询字符串。</p><p>兼容以 <code>?</code> 开头的查询字符串，因此你可以直接传入 <code>location.search</code> 的值。</p> |
|  [pascalCase(text)](./utils.pascalcase.md) | 转换文本为没有分隔符的大写单词字符串。 |
|  [pickAll(data, keys)](./utils.pickall.md) | 选中对象中的所有类型上可见的属性并返回。 |
|  [placeKitten(size)](./utils.placekitten.md) | 给定大小获取占位猫咪图片。 |
|  [placeKitten(width, height)](./utils.placekitten_1.md) | 给定宽高获取占位猫咪图片。 |
|  [pMap(list, callback)](./utils.pmap.md) | <code>Promise.all(data.map(callback))</code> 的简写。 |
|  [prepareData(getter)](./utils.preparedata.md) | 准备数据。 |
|  [readFile(file)](./utils.readfile.md) | 读取给定文件的内容。 |
|  [removeBlankChars(value)](./utils.removeblankchars.md) | 从字符串中移除空白字符。 |
|  [removeEmojiChars(value)](./utils.removeemojichars.md) | 从字符串中移除 emoji 字符。 |
|  [removeNonWordChars(value)](./utils.removenonwordchars.md) | 从字符串中移除非单词字符（移除非英文单词、阿拉伯数字、汉字的所有字符）。 |
|  [rot13(str)](./utils.rot13.md) | 回转 13 位替换式密码。 |
|  [roundTo(number, precision, threshold)](./utils.roundto.md) | 保留 n 位小数下的 x 舍 y 入。 |
|  [run(fn)](./utils.run.md) | 以数组的方式返回函数执行的结果，如果函数返回一个异步操作，将会执行该异步操作并将其结果作为函数执行的结果返回。 |
|  [sampleBy(collection, iteratee)](./utils.sampleby.md) | 从集合中随机获得一个元素的迭代值。 |
|  [sampleBy(collection, iteratee)](./utils.sampleby_1.md) |  |
|  [sampleIndex(collection)](./utils.sampleindex.md) | 从集合中随机获得一个元素的索引（数组）或键（对象）。 |
|  [sampleIndex(collection)](./utils.sampleindex_1.md) |  |
|  [selectElement(selectors, baseElement)](./utils.selectelement.md) |  |
|  [selectElement(selectors, baseElement)](./utils.selectelement_1.md) |  |
|  [selectElementAll(selectors, baseElements)](./utils.selectelementall.md) |  |
|  [selectElementAll(selectors, baseElements)](./utils.selectelementall_1.md) |  |
|  [selectElementExists(selectors, baseElement)](./utils.selectelementexists.md) |  |
|  [selectElementLast(selectors, baseElement)](./utils.selectelementlast.md) |  |
|  [selectElementLast(selectors, baseElement)](./utils.selectelementlast_1.md) |  |
|  [signal()](./utils.signal.md) | 信号。 |
|  [swap(arr, i, j)](./utils.swap.md) | 原地交换数组中的两个元素。 |
|  [toFullWidthString(value)](./utils.tofullwidthstring.md) | 转换为全角字符串。 |
|  [toHalfWidthString(value)](./utils.tohalfwidthstring.md) | 转换为半角字符串。 |
|  [toHttpsUrl(url)](./utils.tohttpsurl.md) | 转换为 https 链接。 |
|  [toSingleLineString(value, truncateOptions)](./utils.tosinglelinestring.md) | 将多行字符串转换为单行字符串。 |
|  [traverse(value, callback)](./utils.traverse.md) | 遍历对象和数组。 |
|  [wait(milliseconds, value)](./utils.wait.md) | 等待一段时间 resolve。 |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AsyncLimitOptions](./utils.asynclimitoptions.md) |  |
|  [AsyncMemoizeOptions](./utils.asyncmemoizeoptions.md) |  |
|  [CalculatorConfig](./utils.calculatorconfig.md) |  |
|  [CalculatorInstance](./utils.calculatorinstance.md) |  |
|  [CopyTextToClipboardOptions](./utils.copytexttoclipboardoptions.md) |  |
|  [CreateSubmitOptions](./utils.createsubmitoptions.md) |  |
|  [CreateUrlQueryStringOptions](./utils.createurlquerystringoptions.md) |  |
|  [DesensitizeOptions](./utils.desensitizeoptions.md) |  |
|  [EventBusListenerDescriptor](./utils.eventbuslistenerdescriptor.md) |  |
|  [EventBusOptions](./utils.eventbusoptions.md) |  |
|  [FormatNumberOptions](./utils.formatnumberoptions.md) | 格式化数字选项。 |
|  [GeoCoordTransformInput](./utils.geocoordtransforminput.md) |  |
|  [GeoCoordTransformOutput](./utils.geocoordtransformoutput.md) |  |
|  [GetEmailUrlOptions](./utils.getemailurloptions.md) |  |
|  [GetEnvironmentResult](./utils.getenvironmentresult.md) |  |
|  [GetSmsUrlOptions](./utils.getsmsurloptions.md) |  |
|  [IsCuid2Options](./utils.iscuid2options.md) |  |
|  [LoadCssResult](./utils.loadcssresult.md) |  |
|  [LoadResourceOptions](./utils.loadresourceoptions.md) |  |
|  [LoadResourceUrl](./utils.loadresourceurl.md) | 资源地址。 |
|  [LocalStoragePlusGetOptions](./utils.localstorageplusgetoptions.md) |  |
|  [LocalStoragePlusOptions](./utils.localstorageplusoptions.md) |  |
|  [LocalStoragePlusSetOptions](./utils.localstorageplussetoptions.md) |  |
|  [LoopUntilOptions](./utils.loopuntiloptions.md) |  |
|  [ParseDataUrlResult](./utils.parsedataurlresult.md) |  |
|  [ParsedFileRichUrl](./utils.parsedfilerichurl.md) |  |
|  [ParsedRichUrl](./utils.parsedrichurl.md) |  |
|  [ReadFileReader](./utils.readfilereader.md) | 各种内容类型的读取器。 |
|  [SignalResult](./utils.signalresult.md) |  |
|  [StringTemplateRenderOptions](./utils.stringtemplaterenderoptions.md) |  |
|  [SubmitActionPayload](./utils.submitactionpayload.md) |  |
|  [TreeDataNode](./utils.treedatanode.md) |  |
|  [TreeDataOptions](./utils.treedataoptions.md) |  |
|  [TreeDataTraverseFnPayload](./utils.treedatatraversefnpayload.md) |  |
|  [WaitResult](./utils.waitresult.md) |  |
|  [WechatChooseImageParams](./utils.wechatchooseimageparams.md) |  |
|  [WechatConfigParams](./utils.wechatconfigparams.md) |  |
|  [WechatGetLocationParams](./utils.wechatgetlocationparams.md) |  |
|  [WechatGetLocationResult](./utils.wechatgetlocationresult.md) |  |
|  [WechatOpenLocationParams](./utils.wechatopenlocationparams.md) |  |
|  [WechatPreviewImageParams](./utils.wechatpreviewimageparams.md) |  |
|  [WechatRequestPaymentParams](./utils.wechatrequestpaymentparams.md) |  |
|  [WechatUpdateShareDataParams](./utils.wechatupdatesharedataparams.md) |  |
|  [WechatUploadImageParams](./utils.wechatuploadimageparams.md) |  |
|  [WechatUploadImageResult](./utils.wechatuploadimageresult.md) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [makeConditionalArray](./utils.makeconditionalarray.md) |  |
|  [wait](./utils.wait.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [Calculator](./utils.calculator.md) | 科学计算器。主要是为了避免 js 的浮点数精度计算问题。 |
|  [devOrProd](./utils.devorprod.md) | <p>开发环境和生产环境返回不同的值或调用不同的函数。</p><p><code>process.env.NODE_ENV</code> 为空值、<code>production</code>、<code>prod</code> 时被认为是生产环境，否则是开发环境。</p> |
|  [keysStrict](./utils.keysstrict.md) | 同 [keys](https://lodash.com/docs/4.17.15#keys)<!-- -->，不过采用了严格的类型定义。 |
|  [omitStrict](./utils.omitstrict.md) | 同 [omit](https://lodash.com/docs/4.17.15#omit)<!-- -->，不过采用了严格的类型定义。 |
|  [pickStrict](./utils.pickstrict.md) | 同 [pick](https://lodash.com/docs/4.17.15#pick)<!-- -->，不过采用了严格的类型定义。 |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [BindEventFunction](./utils.bindeventfunction.md) | 绑定事件函数。 |
|  [BytesNumberValue](./utils.bytesnumbervalue.md) |  |
|  [BytesStringValue](./utils.bytesstringvalue.md) |  |
|  [BytesUnit](./utils.bytesunit.md) |  |
|  [BytesValue](./utils.bytesvalue.md) |  |
|  [CalculatorFunctionValue](./utils.calculatorfunctionvalue.md) |  |
|  [CalculatorPrimitiveValue](./utils.calculatorprimitivevalue.md) |  |
|  [CalculatorValue](./utils.calculatorvalue.md) |  |
|  [ConditionalArrayItem](./utils.conditionalarrayitem.md) |  |
|  [CreateSubmitResult](./utils.createsubmitresult.md) |  |
|  [ElementOfRawData](./utils.elementofrawdata.md) |  |
|  [EnumKey](./utils.enumkey.md) |  |
|  [EnumMap](./utils.enummap.md) |  |
|  [EnumResult](./utils.enumresult.md) |  |
|  [EnumValue](./utils.enumvalue.md) |  |
|  [EventBusBeforeEmit](./utils.eventbusbeforeemit.md) |  |
|  [EventBusBeforeOn](./utils.eventbusbeforeon.md) |  |
|  [EventBusListener](./utils.eventbuslistener.md) |  |
|  [EventBusListeners](./utils.eventbuslisteners.md) |  |
|  [EventBusListenerTag](./utils.eventbuslistenertag.md) |  |
|  [EventBusOffListener](./utils.eventbusofflistener.md) |  |
|  [KeyOfRawData](./utils.keyofrawdata.md) |  |
|  [LoadResourceElement](./utils.loadresourceelement.md) |  |
|  [LoadResourceHook](./utils.loadresourcehook.md) |  |
|  [MiniProgramApi](./utils.miniprogramapi.md) |  |
|  [MiniProgramBrand](./utils.miniprogrambrand.md) |  |
|  [MiniProgramUrlInput](./utils.miniprogramurlinput.md) |  |
|  [MiniProgramUrlJsonInput](./utils.miniprogramurljsoninput.md) |  |
|  [MiniProgramUrlProvider](./utils.miniprogramurlprovider.md) |  |
|  [MiniProgramUrlStringInput](./utils.miniprogramurlstringinput.md) |  |
|  [MiniProgramUrlVersion](./utils.miniprogramurlversion.md) |  |
|  [MsNumberValue](./utils.msnumbervalue.md) |  |
|  [MsStringValue](./utils.msstringvalue.md) |  |
|  [MsUnit](./utils.msunit.md) |  |
|  [MsValue](./utils.msvalue.md) |  |
|  [PackedData](./utils.packeddata.md) |  |
|  [RawData](./utils.rawdata.md) |  |
|  [RawListData](./utils.rawlistdata.md) |  |
|  [RawObjectData](./utils.rawobjectdata.md) |  |
|  [TreeDataChildrenPropName](./utils.treedatachildrenpropname.md) |  |
|  [TreeDataData](./utils.treedatadata.md) |  |
|  [TreeDataMultipleRootData](./utils.treedatamultiplerootdata.md) |  |
|  [TreeDataSearchStrategy](./utils.treedatasearchstrategy.md) |  |
|  [TreeDataSingleRootData](./utils.treedatasinglerootdata.md) |  |
|  [TreeDataStandardNode](./utils.treedatastandardnode.md) |  |
|  [TreeDataTraverseFn](./utils.treedatatraversefn.md) |  |
|  [ValueOfRawData](./utils.valueofrawdata.md) |  |
|  [WechatBeforeInvokeCallback](./utils.wechatbeforeinvokecallback.md) |  |
|  [WechatChooseImageResult](./utils.wechatchooseimageresult.md) |  |
|  [WechatErrorCallback](./utils.wechaterrorcallback.md) |  |
|  [WechatJsApi](./utils.wechatjsapi.md) | 微信 JSSDK 支持的 API。 |
|  [WechatNonBaseMenuItem](./utils.wechatnonbasemenuitem.md) | 微信内网页的非基础菜单列表。 |

